--- a/web.config
+++ b/web.config
@@ -1,4 +1,9 @@
 <configuration>
+<system.web>
+   <compilation debug="true" targetFramework="2.2" />
+   <httpRuntime targetFramework="2.2" requestPathInvalidCharacters="" />
+</system.web>
+
   <system.webServer>
 
     <!-- indicates that the index.js file is a node.js application 
