--- a/web.config
+++ b/web.config
@@ -2,6 +2,7 @@
 <system.web>
    <compilation debug="true" targetFramework="2.2" />
    <httpRuntime targetFramework="2.2" requestPathInvalidCharacters="" />
+   <customErrors mode="RemoteOnly" defaultRedirect="LoginPage.html"/>
 </system.web>
 
   <system.webServer>
