--- a/web.config
+++ b/web.config
@@ -1,18 +1,12 @@
 <configuration>
-<system.web>
-   <compilation debug="true" targetFramework="2.2" />
-   <httpRuntime targetFramework="2.2" requestPathInvalidCharacters="" />
-   <customErrors mode="RemoteOnly" defaultRedirect="LoginPage.html"/>
-</system.web>
-
   <system.webServer>
 
     <!-- indicates that the index.js file is a node.js application 
     to be handled by the iisnode module -->
 
-    <handlers>
+   <!-- <handlers>
       <add name="iisnode" path="LoginPage.html" verb="*" modules="iisnode" />
-    </handlers>
+    </handlers>-->
 
     <!-- adds index.js to the default document list to allow 
     URLs that only specify the application root location, 
