--- a/web.config
+++ b/web.config
@@ -4,9 +4,9 @@
     <!-- indicates that the index.js file is a node.js application 
     to be handled by the iisnode module -->
 
-   <!-- <handlers>
-      <add name="iisnode" path="LoginPage.html" verb="*" modules="iisnode" />
-    </handlers>-->
+    <handlers>
+      <add name="aspNetCore" path="LoginPage.html" verb="*" modules="AspNetCoreModuleV2.2" resourceType="Unspecified" />
+    </handlers>
 
     <!-- adds index.js to the default document list to allow 
     URLs that only specify the application root location, 
