--- a/web.config
+++ b/web.config
@@ -4,9 +4,9 @@
     <!-- indicates that the index.js file is a node.js application 
     to be handled by the iisnode module -->
 
-    <handlers>
+    <!--<handlers>
       <add name="aspNetCore" path="LoginPage.html" verb="*" modules="AspNetCoreModuleV2.2" resourceType="Unspecified" />
-    </handlers>
+    </handlers>-->
 
     <!-- adds index.js to the default document list to allow 
     URLs that only specify the application root location, 
